add ChunkReservation class